# personal-site

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  tailwind.config.js
assets/css/: input.css
src/: config.rs  error.rs  main.rs
src/routes/: home.rs
static/: orb.js  tailwind.css
templates/: 404.html  base.html  home.html
