[package]
name = "personal-website"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["fs", "trace", "compression-gzip"] }
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
anyhow = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
